--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -1,30 +1,30 @@
 <div class="dashboard">
   <section>
     <div class="content">
-      <div class="grid-row">
-        <div class="grid-col">
+      <div class="row">
+        <div class="col">
           <h3 class="pb-3 pt-3 border-bottom">Upcoming Reports</h3>
           <p><span><strong>12/29/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
-      
+
           <p><span><strong>12/31/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
-      
-          <p><span><strong>12/31/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>            
+
+          <p><span><strong>12/31/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
         </div>
-        <div class="grid-col">
+        <div class="col">
           <h3 class="pb-3 pt-3 border-bottom">Upcoming Reports</h3>
           <p><span><strong>11/28/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
-      
+
           <p><span><strong>11/29/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
-      
-          <p><span><strong>11/30/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>            
+
+          <p><span><strong>11/30/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
         </div>
-      </div> <!-- ./grid-row -->
-      <div class="grid-row">
-        <div class="grid-col">
+      </div>
+      <div class="row">
+        <div class="col">
           <h3 class="pb-3 pt-3 border-bottom">Helpful Resources</h3>
-          <p></p>        
+          <p></p>
         </div>
-        <div class="grid-col">
+        <div class="col">
           <h3 class="pb-3 pt-3 border-bottom">Recently Saved & Submitted Reports</h3>
           <table class="table table-striped forms-table">
             <thead>
@@ -83,30 +83,10 @@
                 </td>
               </tr>
             </tbody>
-          </table>          
+          </table>
         </div>
-      </div>        
+      </div>
     </div> <!-- ./content -->
   </section>
-  <!--<footer>
-    <div class="footer">
-      <div class="legal-disclaimer">
-        <button
-          type="button"
-          class="btn btn-link"
-          (click)="open()"
-        >
-          Legal Disclaimer
-        </button>
-      </div>
-      <div class="legal-text" [hidden]="!showLegalDisclaimer">
-        <p>
-          Please be advised that knowingly and willfully making any materially false, fictitious, or fraudulent statement or representation to a federal
-          government agency, including the Federal Election Commission, is punishable under the provisions of 18 U.S.C. § 1001. The Commission may report
-          apparent violations to the appropriate law enforcement authorities. 52 U.S.C. § 30107(a)(9).
-        </p>          
-      </div>          
-    </div>
-  </footer-->  
 </div> <!-- ./dashboard -->
-  
+
