--- a/front-end/src/app/shared/scss/_custom-variables.scss
+++ b/front-end/src/app/shared/scss/_custom-variables.scss
@@ -8,10 +8,10 @@ $screen-md-min: 992px;
 $screen-md-max: 1199px;
 $screen-lg-min: 1200px;
 
-$mainFontFamily: 'Karla';
-$titleFontFamily: 'Gandhi Serif Regular';
-$labelFontFamily: 'Gandhi Serif Bold';
-$committeeInfoFontFamily: 'Gandhi Serif Regular';
+$mainFontFamily: 'Karla, sans-serif';
+$titleFontFamily: 'Gandhi Serif Regular, sans-serif';
+$labelFontFamily: 'Gandhi Serif Bold, sans-serif';
+$committeeInfoFontFamily: 'Gandhi Serif Regular, sans-serif';
 
 $sideBarWidth: 275px;
 $topNavHeight: 60px;
