Fixing footer link for finding a rad analyst.

--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -95,7 +95,7 @@
                 (202) 694-1000 x{{ radAnalystInfo?.telephone_ext }}
               </ng-container>
               <ng-container *ngIf="!radAnalystInfo">
-                <a href="#" target="_blank">
+                <a href="https://www.fec.gov/help-candidates-and-committees/question-rad/" target="_blank">
                   Find & contact your committee's analyst
                 </a>
               </ng-container>
