--- a/front-end/src/app/shared/scss/_custom-variables.scss
+++ b/front-end/src/app/shared/scss/_custom-variables.scss
@@ -17,4 +17,9 @@ $sideBarWidth: 275px;
 $topNavHeight: 60px;
 $mainContentHeight: 75vh;
 
+$footerMobileHeight: 160px;
+$footerDesktopHeight: 80px;
+$footerContactInfoWidth: 80%;
+$footerLegalDisclaimerWidth: 18%;
+
 
