Fne 615 mahendra sprint8 (#276)
* FNE 615 changes

FNE 615 changes

* FNE 615 changes

FNE 615 changes

* FNE615 sign in screen change

FNE615 sign in screen change

* FNE615 sign in screen change

FNE615 sign in screen change

* FNE 599 related changes

FNE 599 related changes

* FNE 599 related changes

FNE 599 related changes

* FNE 599 chnages

FNE 599 chnages

* FNE 500 changes

FNE 500 changes

* FNE 599 changes

FNE 599 changes

* FNE599 changes

FNE599 changes

* FNE 599 changes

FNE 599 changes

* FNE 599 related changes

FNE 599 related changes

* FNE 599 related changes

FNE 599 related changes

* FNE 599 changes

FNE 599 changes

* FNE 599 changes

FNE 599 changes

* FNE 599 changes

FNE 599 changes

* FNE599 changes

FNE599 changes

--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -50,7 +50,7 @@
             {{ form3XReportDashBoardLine1 }}<br />
           </ng-container>
           <ng-container *ngIf="form3XReportDashBoardLine2">
-            {{ form3XReportDashBoardLine2 }}
+            <p >{{ form3XReportDashBoardLine2 }} <A href="/forms/form/3X?step=step_1"><i class="edit-icon"></i></A></p>
           </ng-container>
         </div>
       </div>
