--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -59,7 +59,8 @@
           [formRadioOptionsVisible]="formRadioOptionsVisible"
           [reportTypeRadio]="reportTypeRadio"
           (status)='onNotify($event)'
-          [reportType]=reportType>
+          [reportType]=reportType
+          [coverageDateNotSelected]=coverageDateNotSelected>
 
         </f3x-report-type>
       </div>
