Working on ticket

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -53,7 +53,7 @@
           </div>
           <div class="grid-row info-row">
             <div class="grid-row__col grid-row__col--6 text-left">
-              <b>Enter your text*</b>
+              <b>Enter Your Text*</b>
               <ng-template #tipContent1>
                   Please note that if you copy and paste text into the text box the formatting may be lost.
                   The text box is only for composing a message or letter. The text box does feature basic formatting.
@@ -188,7 +188,7 @@
                       (click)="open(deletePDF)"
                     >
                         <span vertical-align="top" class="close-icon"></span>
-                      </button>
+                    </button>
                   </div>
                   <ng-template #deletePDF let-d="dismiss">
                     <div class="modal-header">
