Fne bugfixesall mahendra sprint8 (#286)
* FNE sprin8 bug fixes

FNE sprin8 bug fixes

* FNE sprin8 bug fixes

FNE sprin8 bug fixes

* FNE sprin8 bug fixes

FNE sprin8 bug fixes

* FNE sprin8 bug fixes

FNE sprin8 bug fixes

* FNE sprin8 bug fixes

FNE sprin8 bug fixes

* FNE sprin8 bug fixes

FNE sprin8 bug fixes

--- a/front-end/src/app/reports/reportheader/reportheader.component.scss
+++ b/front-end/src/app/reports/reportheader/reportheader.component.scss
@@ -1,5 +1,6 @@
-@import '../shared/scss/global';
-
+//  'src/app/shared/scss
+//@import 'src/app/shared/scss/global';
+@import '../../shared/scss/global';
 .forms__wizard {
     display: table;
     table-layout: fixed;
