Removing console.logs and cleaning up app-laylout markup.

--- a/front-end/src/app/app-layout/app-layout.component.scss
+++ b/front-end/src/app/app-layout/app-layout.component.scss
@@ -226,6 +226,16 @@
           font-size: 1em;
           font-family: $committeeInfoFontFamily;
         }
+        .btn-edit {
+          color: $black;
+          text-decoration: none;
+          &:hover,
+          &:visited,
+          &:active {
+            color: black;
+            text-decoration: none;
+          }
+        }
         @include clearfix();
       }
       .app__content {
