--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -50,7 +50,14 @@
             {{ form3XReportDashBoardLine1 }}<br />
           </ng-container>
           <ng-container *ngIf="form3XReportDashBoardLine2">
-            <p >{{ form3XReportDashBoardLine2 }} <A href="/forms/form/3X?step=step_1"><i class="edit-icon"></i></A></p>
+            {{ form3XReportDashBoardLine2 }}
+            <button
+              type="button"
+              class="btn btn-link btn-edit"
+            >
+              <i class="edit-icon" aria-hidden="true"></i>
+              <span class="sr-only">Click to edit date.</span>
+            </button>
           </ng-container>
         </div>
       </div>
