--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -36,7 +36,8 @@
       <app-steps
         [steps]="[
           {text: 'Report<br/>type', step: 'step_1'},
-          {text: 'Form', step: 'step_2'},
+          {text: 'Transaction<br/>type', step: 'step_2'},
+          {text: 'Form', step: 'step_3'},
           {text: 'Preview', step: 'step_4'},
           {text: 'Sign', step: 'step_5'},
           {text: 'Submit', step: 'step_6'}
@@ -48,9 +49,9 @@
     <div
       class="form__content"
     >
-      <div *ngIf="step==='financial_summary'">
+      <ng-container *ngIf="step==='financial_summary'">
         <f3x-financial-summary></f3x-financial-summary>
-      </div>
+      </ng-container>
       <div
         class="form__step"
         [hidden]="step!=='step_1'"
@@ -69,11 +70,12 @@
         class="form__step"
         [hidden]="step!=='step_2'"
       >
-        <f3x-individual-receipt
-          [formOptionsVisible]="formOptionsVisible"
-          [selectedOptions]="selectedOptions"
-          (status)='onNotify($event)'
-        ></f3x-individual-receipt>
+      </div>
+
+      <div
+        class="form__step"
+        [hidden]="step!=='step_3'"
+      >
       </div>
 
       <div
